--- a/1295. Find Numbers with Even Number of Digits.md
+++ b/1295. Find Numbers with Even Number of Digits.md
@@ -29,27 +29,20 @@ Javascript:
  * @param {number[]} nums
  * @return {number}
  */
-var findMaxConsecutiveOnes = function(nums) {
-    let max=0;
-    let current_number_of_ones=0;
-    
-    for(let item of nums){
-        if(item==1){
-            current_number_of_ones+=1;
-            max=Math.max(max,current_number_of_ones);
-        }
-        else{
-            current_number_of_ones=0;            
-        }
+var findNumbers = function(nums) {
+    let ans=0;
+    for(let i=0;i<nums.length;i++){
+        if(nums[i].toString().length%2===0){
+            
+            ans++;
+        }        
     }
-    return max;
+    return ans;
 };
 ```
 ```javascript
-let findMaxConsecutiveOnes = (nums, ans = 0) => {
-    for (let i = 0, cur = 0; i < nums.length; ++i)
-        ans = Math.max(ans, cur = nums[i] == 0 ? 0 : cur + 1);
-    return ans;
+var findNumbers = function(nums) {
+    return nums.reduce((acc, num) => num.toString().length % 2 ? acc : acc + 1, 0)
 };
 ```
 
@@ -57,28 +50,19 @@ Java:
 
 ```java
 class Solution {
-    public int findMaxConsecutiveOnes(int[] nums) {
-        int max=0;
-        int current_number_of_ones=0;
-        
-        for(int item:nums){
-            if(item==1){
-                current_number_of_ones++;
-                max=Math.max(max,current_number_of_ones);
-            }else{
-                current_number_of_ones=0;
+    public int findNumbers(int[] nums) {
+        int ans=0;
+        for(int i=0;i<nums.length;i++){
+            if(Integer.toString(nums[i]).length()%2==0){
+                ans++;
             }
-            
         }
-        return max;
+     return ans;   
     }
 }
 ```
 ```java
-public int findMaxConsecutiveOnes(int[] nums) {
-        int maxHere = 0, max = 0;
-        for (int n : nums)
-            max = Math.max(max, maxHere = n == 0 ? 0 : maxHere + 1);
-        return max; 
-    } 
+public int findNumbers(int[] nums) {
+        return Arrays.stream(nums).map(i -> 1 - Integer.toString(i).length() % 2).sum();
+    }
 ```
