--- a/977. Squares of a Sorted Array.md
+++ b/977. Squares of a Sorted Array.md
@@ -18,7 +18,9 @@ After sorting, it becomes [0,1,9,16,100].
 Javascript:
 
 ```javascript
-
+var sortedSquares = function(nums) {
+    return nums.map(i=>i*i).sort((a,b)=>a-b);    
+};
 ```
 ```javascript
 
@@ -27,9 +29,29 @@ Javascript:
 Java:
 
 ```java
-
+class Solution {
+    public int[] sortedSquares(int[] nums) {
+        return Arrays.stream(nums).map(num->num*num).sorted().toArray();
+    }
+}
 ```
 ```java
-
+class Solution {
+    public int[] sortedSquares(int[] A) {
+        int n = A.length;
+        int[] result = new int[n];
+        int i = 0, j = n - 1;
+        for (int p = n - 1; p >= 0; p--) {
+            if (Math.abs(A[i]) > Math.abs(A[j])) {
+                result[p] = A[i] * A[i];
+                i++;
+            } else {
+                result[p] = A[j] * A[j];
+                j--;
+            }
+        }
+        return result;
+    }
+}
 ```
 
