--- a/977. Squares of a Sorted Array.md
+++ b/977. Squares of a Sorted Array.md
@@ -23,7 +23,22 @@ var sortedSquares = function(nums) {
 };
 ```
 ```javascript
+var sortedSquares = function(A) {
+    let result = [];
+    let l = 0;
+    let r = A.length - 1;
+    let p = r;
 
+    while (l <= r) {
+        if (A[l] ** 2 > A[r] ** 2) {
+            result[p--] = A[l++] ** 2;
+        } else {
+            result[p--] = A[r--] ** 2;
+        }
+    }
+    
+    return result;
+};
 ```
 
 Java:
