Update 88. Merge Sorted Array.md

--- a/88. Merge Sorted Array.md
+++ b/88. Merge Sorted Array.md
@@ -21,12 +21,45 @@ Explanation: After calling your function, the input array is modified to: [1,0,0
 Javascript:
 
 ```javascript
-var duplicateZeros = function(arr) {
-    for(let i=0;i<arr.length;i++){
-        if(arr[i]==0){
-            arr.splice(i,0,0);
-            arr.pop();
-            i++;
+var merge = function (nums1, m, nums2, n) {
+  // 设置一个指针，指针初始化指向nums1的末尾（根据#62，应该是index为 m+n-1 的位置，因为nums1的长度有可能更长）
+  // 然后不断左移指针更新元素
+  let current = m + n - 1;
+
+  while (current >= 0) {
+    // 没必要继续了
+    if (n === 0) return;
+
+    // 为了方便大家理解，这里代码有点赘余
+    if (m < 1) {
+      nums1[current--] = nums2[--n];
+      continue;
+    }
+
+    if (n < 1) {
+      nums1[current--] = nums1[--m];
+      continue;
+    }
+    // 取大的填充 nums1的末尾
+    // 然后更新 m 或者 n
+    if (nums1[m - 1] > nums2[n - 1]) {
+      nums1[current--] = nums1[--m];
+    } else {
+      nums1[current--] = nums2[--n];
+    }
+  }
+};
+```
+```javascript
+var merge = function(nums1, m, nums2, n) {
+      var len = m + n;
+    m--;
+    n--;
+    while (len--) {
+        if (n < 0 || nums1[m] > nums2[n]) {
+            nums1[len] = nums1[m--];
+        } else {
+            nums1[len] = nums2[n--];
         }
     }
 };
