--- a/88. Merge Sorted Array.md
+++ b/88. Merge Sorted Array.md
@@ -69,12 +69,21 @@ var merge = function(nums1, m, nums2, n) {
 Java:
 
 ```java
-public void duplicateZeros(int[] a) {
-  int i = 0, sh = 0;
-  for (i = 0; sh + i < a.length; ++i) sh += a[i] == 0 ? 1 : 0;
-  for (i = i - 1; sh > 0; --i) {
-    if (i + sh < a.length) a[i + sh] = a[i];
-    if (a[i] == 0) a[i + --sh] = a[i];
-  }
+class Solution {
+    public void merge(int[] nums1, int m, int[] nums2, int n) {
+        int i=m-1;
+		int j=n-1;
+		int k = m+n-1;
+		while(i >=0 && j>=0)
+		{
+			if(nums1[i] > nums2[j])
+				nums1[k--] = nums1[i--];
+			else
+				nums1[k--] = nums2[j--];
+		}
+		while(j>=0)
+			nums1[k--] = nums2[j--];
+    }
+    
 }
 ```
