--- a/27. Remove Element.md
+++ b/27. Remove Element.md
@@ -23,13 +23,13 @@ Javascript:
 
 ```javascript
 var removeElement = function(nums, val) {
+    let idx=0;
     for(let i=0;i<nums.length;i++){
-        if(nums[i]==val){
-            nums.splice(i,1);
-            i--;
+        if(nums[i]!=val){
+            nums[idx++]=nums[i];   
         }
     }
-    return nums.length;
+    return idx;
 };
 ```
 
@@ -37,5 +37,15 @@ var removeElement = function(nums, val) {
 Java:
 
 ```java
-
+class Solution {
+    public int removeElement(int[] nums, int val) {
+        int idx=0;
+        for(int i=0;i<nums.length;i++){
+            if(nums[i]!=val){
+                nums[idx++]=nums[i];
+            }
+        }
+        return idx;
+    }
+}
 ```
