--- a/1299. Replace Elements with Greatest Element on Right Side.md
+++ b/1299. Replace Elements with Greatest Element on Right Side.md
@@ -56,13 +56,15 @@ let replaceElements = function(arr) {
 Java:
 
 ```java
- public int[] replaceElements2(int[] A) {
-        int mx = -1, n = A.length, a;
+class Solution {
+     public int[] replaceElements(int[] arr) {
+        int max = -1, n = arr.length, current;
         for (int i = n - 1; i >= 0; --i) {
-            a = A[i];
-            A[i] = mx;
-            mx = Math.max(mx, a);
+            current = arr[i];
+            arr[i] = max;
+            max = Math.max(max, current);
         }
-        return A;
+        return arr;
     }
+}
 ```
