--- a/905. Sort Array By Parity.md
+++ b/905. Sort Array By Parity.md
@@ -1,1 +1,64 @@
+## 905. Sort Array By Parity (Easy)
 
+https://leetcode.com/problems/sort-array-by-parity/
+
+### Problem Description
+
+Given an array A of non-negative integers, return an array consisting of all the even elements of A, followed by all the odd elements of A.
+
+You may return any answer array that satisfies this condition.
+ 
+
+**Example 1**:
+```
+Input: [3,1,2,4]
+Output: [2,4,3,1]
+The outputs [4,2,3,1], [2,4,1,3], and [4,2,1,3] would also be accepted.
+
+```
+### Solutions
+
+Javascript:
+
+```javascript
+var sortArrayByParity = function(A) {
+    for(let i=0;i<A.length;i++){
+        if(A[i]%2==0){
+            A.unshift(A[i]);
+            A.splice(i+1,1);
+        }
+    }
+    return A;
+};
+```
+
+
+Java:
+
+```java
+var sortArrayByParity = function(A) {
+    let i=0;
+    let j=A.length-1; 
+    while(i<j){
+        if(A[i]%2>A[j]%2){
+            let tmp=A[i];
+            A[i]=A[j];
+            A[j]=tmp;
+        }
+        if(A[i]%2==0) i++;
+        if(A[j]%2==1) j--;
+    }
+    return A;
+};
+```
+```java
+ public int[] sortArrayByParity(int[] A) {
+        for (int i = 0, j = 0; j < A.length; j++)
+            if (A[j] % 2 == 0) {
+                int tmp = A[i];
+                A[i++] = A[j];
+                A[j] = tmp;;
+            }
+        return A;
+    }
+```
