--- a/1051. Height Checker.md
+++ b/1051. Height Checker.md
@@ -46,7 +46,8 @@ var heightChecker = function(heights) {
 Java:
 
 ```java
-//Just count the frequency of each height (using HashMap or int[] as the height is promised to be within range[1, 100]) and use 2 pointers to make comparison
+//Just count the frequency of each height (using HashMap or int[] as the height is promised to be within range[1, 100]) 
+//and use 2 pointers to make comparison
 class Solution {
     public int heightChecker(int[] heights) {
         int[] heightToFreq = new int[101];
