Update 1051. Height Checker.md

--- a/1051. Height Checker.md
+++ b/1051. Height Checker.md
@@ -30,8 +30,6 @@ var heightChecker = function(heights) {
         A.push(e);
         }
     heights.sort((a,b) => a-b);
-    console.log(A);
-    console.log(heights);
     let count=0;
     for(let i=0;i<heights.length;i++){
         if(A[i]!=heights[i]){
@@ -39,6 +37,12 @@ var heightChecker = function(heights) {
         }
     }
     return count;
+}
+```
+```javascript
+const heightChecker = (heights) => {
+    const sorted = [...heights].sort((a,b) => a-b)
+    return heights.reduce((total,_,index) =>  sorted[index] !== heights[index] ? total + 1 : total,0)
 }
 ```
 
