--- a/414. Third Maximum Number.md
+++ b/414. Third Maximum Number.md
@@ -51,42 +51,29 @@ var thirdMax = function(nums) {
     else return max;
 };
 ```
-```javascript
-const heightChecker = (heights) => {
-    const sorted = [...heights].sort((a,b) => a-b)
-    return heights.reduce((total,_,index) =>  sorted[index] !== heights[index] ? total + 1 : total,0)
-}
-```
+
 
 
 Java:
 
 ```java
-//Just count the frequency of each height (using HashMap or int[] as the height is promised to be within range[1, 100]) 
-//and use 2 pointers to make comparison
-class Solution {
-    public int heightChecker(int[] heights) {
-        int[] heightToFreq = new int[101];
-        
-        for (int height : heights) {
-            heightToFreq[height]++;
-        }
-        
-        int result = 0;
-        int curHeight = 0;
-        
-        for (int i = 0; i < heights.length; i++) {
-            while (heightToFreq[curHeight] == 0) {
-                curHeight++;
+public int thirdMax(int[] nums) {
+        Integer max1 = null;
+        Integer max2 = null;
+        Integer max3 = null;
+        for (Integer n : nums) {
+            if (n.equals(max1) || n.equals(max2) || n.equals(max3)) continue;
+            if (max1 == null || n > max1) {
+                max3 = max2;
+                max2 = max1;
+                max1 = n;
+            } else if (max2 == null || n > max2) {
+                max3 = max2;
+                max2 = n;
+            } else if (max3 == null || n > max3) {
+                max3 = n;
             }
-            
-            if (curHeight != heights[i]) {
-                result++;
-            }
-            heightToFreq[curHeight]--;
         }
-        
-        return result;
+        return max3 == null ? max1 : max3;
     }
-}
 ```
