Update 414. Third Maximum Number.md

--- a/414. Third Maximum Number.md
+++ b/414. Third Maximum Number.md
@@ -47,7 +47,7 @@ var thirdMax = function(nums) {
             thirdMax=num;
         }
     }
-    if(thirdMax||thirdMax==0)    return thirdMax;
+    if(thirdMax!=null)    return thirdMax;
     else return max;
 };
 ```
