Update 448. Find All Numbers Disappeared in an Array.md

--- a/448. Find All Numbers Disappeared in an Array.md
+++ b/448. Find All Numbers Disappeared in an Array.md
@@ -1,5 +1,5 @@
 ## 1051. Height Checker (Easy)
-https://leetcode.com/problems/height-checker/
+https://leetcode.com/problems/find-all-numbers-disappeared-in-an-array/
 
 ### Problem Description
 Given an array nums of n integers where nums[i] is in the range [1, n], return an array of all the integers in the range [1, n] that do not appear in nums.
@@ -27,38 +27,39 @@ var findDisappearedNumbers = function(nums) {
 };
 ```
 ```javascript
-
+var findDisappearedNumbers = function(nums) {
+    let res = [];
+    for (let i = 0; i < nums.length; i++) {
+        let num = Math.abs(nums[i]);
+        let idx = num-1;
+        nums[idx] = Math.abs(nums[idx]) * -1;
+    }
+    for (let i = 0; i < nums.length; i++) {
+        if (nums[i] > 0) res.push(i+1);
+    }
+    return res;
+    // Time Complexity: O(N)
+    // Space Complexity: O(1)
+};
 ```
 
 
 Java:
 
 ```java
-//Just count the frequency of each height (using HashMap or int[] as the height is promised to be within range[1, 100]) 
-//and use 2 pointers to make comparison
-class Solution {
-    public int heightChecker(int[] heights) {
-        int[] heightToFreq = new int[101];
-        
-        for (int height : heights) {
-            heightToFreq[height]++;
-        }
-        
-        int result = 0;
-        int curHeight = 0;
-        
-        for (int i = 0; i < heights.length; i++) {
-            while (heightToFreq[curHeight] == 0) {
-                curHeight++;
+ public List<Integer> findDisappearedNumbers(int[] nums) {
+        for (int i : nums) {
+            int index = Math.abs(i);
+            if (nums[index - 1] > 0) {
+                nums[index - 1] *= -1;
             }
-            
-            if (curHeight != heights[i]) {
-                result++;
-            }
-            heightToFreq[curHeight]--;
         }
-        
-        return result;
+        List<Integer> res = new ArrayList<>();
+        for (int i = 0; i < nums.length; i++) {
+            if (nums[i] > 0) {
+                res.add(i + 1);
+            }
+        }
+        return res;
     }
-}
 ```
