Update 448. Find All Numbers Disappeared in an Array.md

--- a/448. Find All Numbers Disappeared in an Array.md
+++ b/448. Find All Numbers Disappeared in an Array.md
@@ -1,4 +1,4 @@
-## 1051. Height Checker (Easy)
+## 48. Find All Numbers Disappeared in an Array (Easy)
 https://leetcode.com/problems/find-all-numbers-disappeared-in-an-array/
 
 ### Problem Description
