--- a/141. Linked List Cycle.md
+++ b/141. Linked List Cycle.md
@@ -30,6 +30,21 @@ public class Solution {
             fast=fast.next.next;
         }
         return true;
+    }
 }
+```
+```java
+public class Solution {
+    public boolean hasCycle(ListNode head) {
+        Set<ListNode> nodesSeen = new HashSet<>();
+        while (head != null) {
+            if (nodesSeen.contains(head)) {
+                return true;
+            }
+            nodesSeen.add(head);
+            head = head.next;
+        }
+        return false;
+    }
 }
 ```
