Update 141. Linked List Cycle.md

--- a/141. Linked List Cycle.md
+++ b/141. Linked List Cycle.md
@@ -11,6 +11,32 @@ Return true if there is a cycle in the linked list. Otherwise, return false.
 
 
 ### Solutions
+Javascript:
+```javascript
+var hasCycle = function(head) {
+  let fast = head;
+  let slow = head;
+  
+  while (fast && fast.next) {
+    fast = fast.next.next;
+    slow = slow.next;
+    
+    if (fast === slow) return true;
+  }
+  return false;
+};
+```
+```javascript
+var hasCycle = function(head) {
+  const nodes = new Set();
+  while (head) {
+    if (nodes.has(head)) return true;
+    nodes.add(head);
+    head = head.next;
+  }
+  return false;
+};
+```
 
 Java:
 
@@ -48,3 +74,5 @@ public class Solution {
     }
 }
 ```
+
+
