Update 237. Delete Node in a Linked List.md

--- a/237. Delete Node in a Linked List.md
+++ b/237. Delete Node in a Linked List.md
@@ -7,7 +7,8 @@ https://leetcode.com/problems/delete-node-in-a-linked-list/
 Java:
 
 ```java
-//We can't really delete the node, but we can kinda achieve the same effect by instead removing the next node after copying its data into the node that we were asked to delete.
+//We can't really delete the node, but we can kinda achieve the same effect by instead removing 
+//the next node after copying its data into the node that we were asked to delete.
  public void deleteNode(ListNode node) {
          node.val=node.next.val;
     node.next=node.next.next;
