--- a/121. Best Time to Buy and Sell Stock.md
+++ b/121. Best Time to Buy and Sell Stock.md
@@ -17,3 +17,20 @@ class Solution {
 ## Method 2
 
 Java:
+```java
+class Solution {
+    public int maxProfit(int[] prices) {
+        int len = prices.length;
+        if (len<2){
+            return 0;
+        }
+        
+        int res =0, min = prices[0];
+        for(int i=1;i<len;i++){
+            res = Math.max(res, prices[i]-min);
+            min = Math.min (min,prices[i]);
+        }
+        return res;
+    }
+}
+```
