Update 121. Best Time to Buy and Sell Stock.md

--- a/121. Best Time to Buy and Sell Stock.md
+++ b/121. Best Time to Buy and Sell Stock.md
@@ -25,10 +25,10 @@ class Solution {
             return 0;
         }
         
-        int res =0, min = prices[0];
+        int res =0, minVal = prices[0];
         for(int i=1;i<len;i++){
-            res = Math.max(res, prices[i]-min);
-            min = Math.min (min,prices[i]);
+            res = Math.max(res, prices[i]-minVal);
+            minVal = Math.min (minVal,prices[i]);
         }
         return res;
     }
