--- a/121. Best Time to Buy and Sell Stock.md
+++ b/121. Best Time to Buy and Sell Stock.md
@@ -7,9 +7,24 @@
 Java:
 
 ```java
-class Solution {
+public class Solution {
+
     public int maxProfit(int[] prices) {
-        
+        int len = prices.length;
+        if (len < 2) {
+            return 0;
+        }
+
+        // 有可能不发生交易，因此结果集的初始值设置为 0
+        int res = 0;
+
+        // 枚举所有发生一次交易的股价差
+        for (int i = 0; i < len - 1; i++) {
+            for (int j = i + 1; j < len; j++) {
+                res = Math.max(res, prices[j] - prices[i]);
+            }
+        }
+        return res;
     }
 }
 ```
