Update 121. Best Time to Buy and Sell Stock.md

--- a/121. Best Time to Buy and Sell Stock.md
+++ b/121. Best Time to Buy and Sell Stock.md
@@ -2,7 +2,7 @@
 
 [https://leetcode.com/problems/best-time-to-buy-and-sell-stock/](https://leetcode.com/problems/best-time-to-buy-and-sell-stock/)
 
-## Brutal force:
+## Method 1: Brutal force
 
 Java:
 
@@ -29,7 +29,7 @@ public class Solution {
 }
 ```
 
-## Method 2: DP
+## Method 2: Greedy
 
 Java:
 ```java
