--- a/136. Single Number.md
+++ b/136. Single Number.md
@@ -17,7 +17,7 @@ Output: 1
 ### Solutions
 
 Java:
-
+## HashMap
 ```java
  public int singleNumber(int[] nums) {
         HashMap<Integer,Integer> map= new HashMap<Integer,Integer>();
@@ -32,4 +32,16 @@ Java:
         }
         return 0;
     }
+```
+## Bit Manipulation:
+```java
+class Solution {
+    public int singleNumber(int[] nums) {
+        int single=0;
+        for(int num:nums){
+            single^=num;
+        }
+        return single;
+    }
+}
 ```
