Update 1. Two Sum.md

--- a/1. Two Sum.md
+++ b/1. Two Sum.md
@@ -21,3 +21,18 @@ class Solution {
     }
 }
 ```
+Go
+```go
+func twoSum(nums []int, target int) []int {
+    m:=make(map[int]int)
+    for i:=0;i<len(nums);i++ {
+        diff:=target-nums[i]
+        if _,ok:= m[diff];ok{
+            res:=[]int{m[diff],i}
+            return res
+        }
+        m[nums[i]]=i
+    }
+    return nil
+}
+```
