--- a/206. Reverse Linked List.md
+++ b/206. Reverse Linked List.md
@@ -32,3 +32,17 @@ public ListNode reverseList(ListNode head) {
     }
 }
 ```
+
+Go:
+```go
+func reverseList(head *ListNode) *ListNode {
+    var prev *ListNode
+    for head!=nil {
+        next := head.Next
+        head.Next = prev
+        prev = head
+        head = next
+    }
+    return prev
+}
+```
