--- a/53. Maximum Subarray.md
+++ b/53. Maximum Subarray.md
@@ -2,7 +2,7 @@
 [https://leetcode.com/problems/maximum-subarray/](https://leetcode.com/problems/maximum-subarray/)
 
 ## Method 1: Brutal Force
-
+Java
 ```java
 class Solution {
     public int maxSubArray(int[] nums) {
@@ -22,7 +22,7 @@ class Solution {
 ```
 
 ## Method 2: DP
-
+Java
 ```java
 class Solution {
     public int maxSubArray(int[] nums) {
@@ -34,5 +34,20 @@ class Solution {
         }
         return maxSum;
     }
+}
+```
+Go
+```Go
+func maxSubArray(nums []int) int {
+    max := nums[0]
+    for i:=1;i<len(nums);i++ {
+        if nums[i]+nums[i-1] > nums[i] {
+            nums[i]+=nums[i-1]
+        }
+        if nums[i] > max {
+            max = nums[i]
+        }
+    }
+      return max
 }
 ```
