--- a/121. Best Time to Buy and Sell Stock.md
+++ b/121. Best Time to Buy and Sell Stock.md
@@ -49,3 +49,18 @@ class Solution {
     }
 }
 ```
+Go
+```go
+func maxProfit(prices []int) int {
+    min, res := prices[0], 0
+    for i:=1;i<len(prices);i++ {
+        if prices[i] - min >res {
+            res = prices[i] - min
+        }
+        if prices[i] < min {
+            min = prices[i]
+        }
+    }
+    return res
+}
+```
