--- a/20. Valid Parentheses.md
+++ b/20. Valid Parentheses.md
@@ -2,7 +2,7 @@
 [https://leetcode.com/problems/valid-parentheses/](https://leetcode.com/problems/valid-parentheses/)
 
 ## Method 1: Stack
-
+Java
 ```java
 class Solution {
     public boolean isValid(String s) {
@@ -24,5 +24,23 @@ class Solution {
         }
         return deque.isEmpty();
     }
+}
+```
+Go
+```go
+func isValid(s string) bool {
+    stack := make([]rune,0)
+    for _,v:= range s {
+        if (v == '(') || (v=='[') || (v=='{') {
+            stack = append(stack, v)
+        } else if (v == ')' && len(stack) > 0 && stack[len(stack)-1] == '(') ||
+            (v == ']' && len(stack) > 0 && stack[len(stack)-1] == '[') ||
+            (v == '}' && len(stack) > 0 && stack[len(stack)-1] == '{') {
+            stack = stack[:len(stack)-1]
+        } else {
+            return false
+        }
+    }
+    return len(stack)==0
 }
 ```
