--- a/70. Climbing Stairs.md
+++ b/70. Climbing Stairs.md
@@ -1,5 +1,5 @@
 ## DP: Array
-
+Java
 ```java
 class Solution {
     public int climbStairs(int n) {
@@ -15,9 +15,24 @@ class Solution {
     }
 }
 ```
+Go
+```go
+func climbStairs(n int) int {
+    if n<2 {
+        return 1
+    }
+    dp := make([]int, n)
+    dp[0] = 1
+    dp[1] = 2
+    for i:=2;i<n;i++ {
+        dp[i] = dp[i-1] + dp[i-2]
+    }
+    return dp[n-1]
+}
+```
 
 ## DP: Variables
-
+Java
 ```java
 class Solution {
     public int climbStairs(int n) {
@@ -29,5 +44,17 @@ class Solution {
         }
         return c;
     }
+}
+```
+Go
+```go
+func climbStairs(n int) int {
+    a, b, c := 0, 1, 0
+    for i:=1;i<=n;i++ {
+        c = a + b
+        a = b
+        b = c
+    }
+    return c
 }
 ```
