--- a/704. Binary Search.md
+++ b/704. Binary Search.md
@@ -1,5 +1,5 @@
 ## Brutal:
-
+Java
 ```java
 class Solution {
     public int search(int[] nums, int target) {
@@ -15,7 +15,7 @@ class Solution {
 ```
 
 ## Binary Search
-
+Java
 ```java
 class Solution {
     public int search(int[] nums, int target) {
@@ -33,5 +33,22 @@ class Solution {
         }
         return -1;
     }
+}
+```
+Go
+```go
+func search(nums []int, target int) int {
+    left, right := 0, len(nums)-1
+    for left <= right {
+        mid := left + (right-left) >>1
+        if nums[mid] == target {
+            return mid
+        } else if nums[mid] < target {
+            left = mid+1
+        }else {
+            right = mid-1
+        }
+    }
+    return -1
 }
 ```
