Update 9. Palindrome Number.md

--- a/9. Palindrome Number.md
+++ b/9. Palindrome Number.md
@@ -20,7 +20,7 @@ class Solution {
 ```
 
 ## Reverse half
-
+Java
 ```java
 class Solution {
     public boolean isPalindrome(int x) {
@@ -32,5 +32,19 @@ class Solution {
         }
         return x==rev|x==rev/10;
     }
+}
+```
+Go
+```go
+func isPalindrome(x int) bool {
+    if x < 0 || (x % 10 == 0 && x != 0) {
+        return false
+    }
+    rev := 0
+    for x > rev {
+        rev = rev * 10 + x % 10
+        x /= 10 
+    }
+    return x == rev || x == rev/10
 }
 ```
