--- a/104. Maximum Depth of Binary Tree.md
+++ b/104. Maximum Depth of Binary Tree.md
@@ -34,3 +34,20 @@ class Solution {
     }
 }
 ```
+Go:
+```go
+func maxDepth(root *TreeNode) int {
+    if root == nil {
+        return 0
+    }
+    return max(maxDepth(root.Left),maxDepth(root.Right)) + 1
+}
+
+func max (a, b int) int {
+    if (a > b){
+        return a
+    } else {
+        return b
+    }
+}
+```
