Update 101. Symmetric Tree.md

--- a/101. Symmetric Tree.md
+++ b/101. Symmetric Tree.md
@@ -16,6 +16,22 @@ class Solution {
     }
 }
 ```
+Go
+```
+func isSymmetric(root *TreeNode) bool {
+    return compare(root, root)
+}
+
+func compare(left *TreeNode, right *TreeNode) bool {
+    if left == nil && right == nil {
+        return true
+    }
+    if left == nil || right == nil || left.Val != right.Val {
+        return false
+    }
+    return compare(left.Left, right.Right) && compare(right.Left, left.Right)
+}
+```
 
 ## Method 2:Iterate
 
