Update 160. Intersection of Two Linked Lists.md

--- a/160. Intersection of Two Linked Lists.md
+++ b/160. Intersection of Two Linked Lists.md
@@ -47,6 +47,21 @@ public class Solution {
     }
 }
 ```
+Go
+```go
+func getIntersectionNode(headA, headB *ListNode) *ListNode {
+    vis := map[*ListNode]bool{}
+    for tmp:=headA;tmp!=nil;tmp=tmp.Next {
+        vis[tmp] = true
+    }
+    for tmp:=headB;tmp!=nil;tmp=tmp.Next {
+        if vis[tmp] {
+            return tmp
+        }
+    }
+    return nil
+}
+```
 
 ## Method 3: Two pointer
 
@@ -63,5 +78,19 @@ public class Solution {
         }
         return a;
     }
+}
+```
+Go
+```go
+func hasCycle(head *ListNode) bool {
+   slow, fast := head, head
+   for fast != nil && fast.Next != nil {
+       slow = slow.Next
+       fast = fast.Next.Next
+       if slow == fast {
+           return true
+       }
+   } 
+   return false
 }
 ```
