--- a/94. Binary Tree Inorder Traversal.md
+++ b/94. Binary Tree Inorder Traversal.md
@@ -20,6 +20,22 @@ class Solution {
     }
 }
 ```
+Go
+```go
+func inorderTraversal(root *TreeNode) []int {
+    var result []int
+    inorder(root, &result)
+    return result
+}
+
+func inorder(root *TreeNode, output *[]int ) {
+    if root != nil {
+        inorder(root.Left, output)
+    *output = append(*output, root.Val)
+    inorder(root.Right, output)
+    }
+}
+```
 
 ## Method 2: Iterate
 ```java
