Update 136. Single Number.md

--- a/136. Single Number.md
+++ b/136. Single Number.md
@@ -16,8 +16,8 @@ Output: 1
 ```
 ### Solutions
 
-Java:
 ## HashMap
+Java
 ```java
  public int singleNumber(int[] nums) {
         HashMap<Integer,Integer> map= new HashMap<Integer,Integer>();
@@ -32,6 +32,21 @@ Java:
         }
         return 0;
     }
+```
+Go
+```go
+func singleNumber(nums []int) int {
+    m := map[int]int{}
+    for _,v:= range nums {
+        m[v]++
+    }
+    for _,v:= range nums {
+        if m[v]==1 {
+            return v
+        }
+    }
+    return 0
+}
 ```
 ## Bit Manipulation:
 ```java
