Update 136. Single Number.md

--- a/136. Single Number.md
+++ b/136. Single Number.md
@@ -60,3 +60,13 @@ class Solution {
     }
 }
 ```
+Go
+```go
+func singleNumber(nums []int) int {
+    res := 0
+    for _,v := range nums{
+        res ^= v
+    }
+    return res
+}
+```
