--- a/415. Add Strings.md
+++ b/415. Add Strings.md
@@ -3,6 +3,7 @@
 [https://leetcode.com/problems/add-strings/](https://leetcode.com/problems/add-strings/)
 
 ## Method 1: Simulation
+Java
 ```java
 class Solution {
     public String addStrings(String num1, String num2) {
@@ -20,5 +21,28 @@ class Solution {
         res=res.reverse();
         return res.toString();
     }
+}
+```
+Go
+```go
+func addStrings(num1 string, num2 string) string {
+    i, j, carry := len(num1)-1, len(num2)-1, 0
+    res := ""
+    for i>=0 || j>=0 || carry!=0 {
+        var x, y int
+        if i>=0 {
+            x = int(num1[i]-'0')
+        } 
+        if j>=0 {
+            y = int(num2[j]-'0')
+        } 
+
+        sum := x + y + carry
+        res = strconv.Itoa(sum%10) + res
+        carry = sum/10
+        i--
+        j--
+    }
+    return res
 }
 ```
