--- a/169. Majority Element.md
+++ b/169. Majority Element.md
@@ -4,6 +4,7 @@ https://leetcode.com/problems/majority-element/
 
 ### Solutions
 
+## Method 1
 Java:
 
 ```java
@@ -22,4 +23,25 @@ public int majorityElement(int[] nums) {
         
         return majorEntry.getKey();
     }
+```
+
+
+## Method 2
+Go
+```go
+func majorityElement(nums []int) int {
+    res, count := nums[0], 0
+    for i:=0;i<len(nums);i++ {
+        if count == 0 {
+            res, count = nums[i], 1
+        } else {
+            if nums[i]==res {
+                count++
+            } else {    
+                count--
+            }
+        }
+    }
+    return res
+}
 ```
