--- a/35. Search Insert Position.md
+++ b/35. Search Insert Position.md
@@ -2,18 +2,18 @@
 Go
 ```go
 func searchInsert(nums []int, target int) int {
-    left, right :=0, len(nums)-1
-    if target > nums[right] {
-        return right+1
-    }
-    for left < right {
-        mid := left + (right - left)>>1
-        if nums[mid] < target {
-            left = mid+1
+    n := len(nums)
+    left, right := 0, n - 1
+    ans := n
+    for left <= right {
+        mid := (right - left) >> 1 + left
+        if target <= nums[mid] {
+            ans = mid
+            right = mid - 1
         } else {
-            right = mid
+            left = mid + 1
         }
     }
-    return left
+    return ans
 }
 ```
