Update 144. Binary Tree Preorder Traversal.md

--- a/144. Binary Tree Preorder Traversal.md
+++ b/144. Binary Tree Preorder Traversal.md
@@ -8,12 +8,11 @@ func preorderTraversal(root *TreeNode) []int {
 }
 
 func preorder(root *TreeNode, output *[]int) {
-    if root == nil {
-        return
+    if root != nil {
+        *output = append(*output, root.Val)
+        preorder(root.Left, output)
+        preorder(root.Right, output)
     }
-    *output = append(*output, root.Val)
-    preorder(root.Left, output)
-    preorder(root.Right, output)
 }
 ```
 
