--- a/27. Remove Element.md
+++ b/27. Remove Element.md
@@ -49,3 +49,37 @@ class Solution {
     }
 }
 ```
+
+Go:
+## Two pointers
+Go
+```go
+func removeElement(nums []int, val int) int {
+    left := 0 
+    for _,v := range nums {
+        if v != val {
+            nums[left]=v
+            left++
+        }
+    }
+    return left
+}
+```
+
+## Two pointers optimized
+Go
+```go
+func removeElement(nums []int, val int) int {
+    left, right := 0, len(nums)-1
+    for left<=right {
+        if nums[left] == val {
+            nums[left] = nums[right]
+            right--
+        } else {
+            left++
+        }
+    }
+    return left
+}
+```
+
