--- a/155. Min Stack.md
+++ b/155. Min Stack.md
@@ -3,7 +3,7 @@
 [https://leetcode.com/problems/min-stack/](https://leetcode.com/problems/min-stack/)
 
 ## Method 1: Helper stack
-
+Java
 ```java
 class MinStack {
      private Deque<Integer> s;
@@ -31,6 +31,47 @@ class MinStack {
     
     public int getMin() {
         return mins.peek();
+    }
+}
+```
+Go
+```go
+type MinStack struct {
+    stack []int
+    minStack []int
+}
+
+func Constructor() MinStack {
+    return MinStack{
+        stack: []int{},
+        minStack: []int{math.MaxInt64},
+    }
+}
+
+func (this *MinStack) Push(val int)  {
+    this.stack = append(this.stack, val)
+    top := this.minStack[len(this.minStack)-1]
+    this.minStack=append(this.minStack,min(top,val))
+}
+
+func (this *MinStack) Pop()  {
+    this.stack=this.stack[:len(this.stack)-1]
+    this.minStack=this.minStack[:len(this.minStack)-1]
+}
+
+func (this *MinStack) Top() int {
+    return this.stack[len(this.stack)-1]
+}
+
+func (this *MinStack) GetMin() int {
+    return this.minStack[len(this.minStack)-1]
+}
+
+func min (x, y int) int {
+    if x<y {
+        return x
+    }else {
+        return y
     }
 }
 ```
