Update 448. Find All Numbers Disappeared in an Array.md

--- a/448. Find All Numbers Disappeared in an Array.md
+++ b/448. Find All Numbers Disappeared in an Array.md
@@ -63,3 +63,41 @@ Java:
         return res;
     }
 ```
+Go:
+## Map
+```go
+func findDisappearedNumbers(nums []int) []int {
+    seen := make(map[int]bool) 
+    res := []int{}
+    for _,v :=range nums {
+        seen[v]=true
+    }
+    for i:=1;i<=len(nums);i++ {
+        if !seen[i] {
+            res=append(res,i)
+        }
+    }
+    return res
+}
+```
+
+## In place
+```go
+func findDisappearedNumbers(nums []int) []int {
+    res := []int{}
+    for _,v := range nums {
+        if v<0 {
+            v=-v
+        }
+        if nums[v-1]>0 {
+            nums[v-1]=-nums[v-1]
+        }
+    }
+    for i,v:=range nums {
+        if v>0 {
+            res=append(res,i+1)
+        }
+    }
+    return res
+}
+```
