--- a/169. Majority Element.md
+++ b/169. Majority Element.md
@@ -45,3 +45,25 @@ func majorityElement(nums []int) int {
     return res
 }
 ```
+Java
+```java
+class Solution {
+    public int majorityElement(int[] nums) {
+        int res=nums[0];
+        int count=1;
+        for (int i=1;i<nums.length;i++) {
+            if (count==0) {
+                res=nums[i];
+                count=1;
+            } else {
+                if (nums[i]==res) {
+                    count++;
+                }else{
+                    count--;
+                }
+            }
+        }
+        return res;
+    }
+}
+```
