--- a/110. Balanced Binary Tree.md
+++ b/110. Balanced Binary Tree.md
@@ -31,3 +31,22 @@ func abs(x int) int {
     return x
 }
 ```
+Java
+```java
+class Solution {
+    public boolean isBalanced(TreeNode root) {
+        return recur(root)!=-1;
+    }
+
+    private int recur(TreeNode root){
+        if (root == null) {
+            return 0;
+        }
+        int left = recur(root.left);
+        if (left==-1) return -1;
+        int right = recur(root.right);
+        if (right==-1) return -1;
+        return Math.abs(left-right)<=1? Math.max(left,right)+1:-1;
+    }
+}
+```
