--- a/412. Fizz Buzz.md
+++ b/412. Fizz Buzz.md
@@ -20,7 +20,7 @@ Output: ["1","2","Fizz","4","Buzz","Fizz","7","8","Fizz","Buzz","11","Fizz","13"
 ### Solutions
 
 Java:
-
+#### HashMap
 ```java
   public List<String> fizzBuzz(int n) {
         List<String> ans= new ArrayList<String>();
@@ -43,4 +43,25 @@ Java:
         return ans;
     }
 ```
-
+#### StringBuilder
+```java
+class Solution {
+    public List<String> fizzBuzz(int n) {
+        List<String> res = new ArrayList<>();
+        for (int i=1;i<=n;i++){
+            StringBuilder sb = new StringBuilder();
+            if (i%3==0){
+                sb.append("Fizz");
+            } 
+            if (i%5==0) {
+                sb.append("Buzz");
+            } 
+            if (sb.length()==0) {
+                sb.append(i);
+            }
+            res.add(sb.toString());
+        }
+        return res;
+    }
+}
+```
