--- a/199. Binary Tree Right Side View.md
+++ b/199. Binary Tree Right Side View.md
@@ -26,3 +26,28 @@ class Solution {
     }
 }
 ```
+
+### *DFS
+Java
+```java
+class Solution {
+    private List<Integer> res = new ArrayList<Integer>();
+
+    public List<Integer> rightSideView(TreeNode root) {
+        dfs(root,0);
+        return res;
+    }
+
+    public void dfs(TreeNode root,int depth){
+        if (root==null){
+            return;
+        }
+        if (res.size()==depth){
+            res.add(root.val);
+        }
+        depth++;
+        dfs(root.right,depth);
+        dfs(root.left,depth);
+    }
+}
+```
