Update 236. Lowest Common Ancestor of a Binary Tree.md

--- a/236. Lowest Common Ancestor of a Binary Tree.md
+++ b/236. Lowest Common Ancestor of a Binary Tree.md
@@ -1,4 +1,21 @@
-### Recursion
+### 1.
+Java
+```java
+class Solution {
+    public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
+        if (root==null || root==p || root==q){
+            return root;
+        }
+        TreeNode left=lowestCommonAncestor(root.left,p,q);
+        TreeNode right=lowestCommonAncestor(root.right,p,q);
+        if (left==null && right == null) return null;
+        if (left==null) return right;
+        if (right==null) return left;
+        return root;
+    }
+}
+```
+### *2.
 Go
 ```go
 func lowestCommonAncestor(root, p, q *TreeNode) *TreeNode {
@@ -18,4 +35,40 @@ func lowestCommonAncestor(root, p, q *TreeNode) *TreeNode {
      }
      return left
 }
+```
+Java
+```java
+class Solution {
+    public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
+        // 边界条件
+        if (root == null) {
+            return null;
+        }
+        // 如果p,q为根节点，则公共祖先为根节点
+        if (root==p||root==q){
+            return root;
+        }
+        // 如果p,q在左子树，则公共祖先在左子树查找
+        if (find(root.left,p)&&find(root.left,q)){
+            return lowestCommonAncestor(root.left,p,q);
+        }
+        // 如果p,q在右子树，则公共祖先在右子树查找
+        if (find(root.right,p)&&find(root.right,q)){
+            return lowestCommonAncestor(root.right,p,q);
+        }
+        // 如果p,q分属两侧，则公共祖先为根节点
+        return root;
+    }
+
+    public boolean find(TreeNode root, TreeNode node){
+        if (root==null){
+            return false;
+        }
+        if (root==node){
+            return true;
+        }
+        return find(root.left,node)||find(root.right,node);
+    }
+}
+```
 ```
