--- a/912. Sort an Array.md
+++ b/912. Sort an Array.md
@@ -58,3 +58,105 @@ class Solution {
     }
 }
 ```
+### Quick Sort 
+Java
+```java
+class Solution {
+    //新建随机类
+    Random random= new Random();
+
+    public int[] sortArray(int[] nums) {
+        quickSort(nums,0,nums.length-1);
+        return nums;
+    }
+
+    //快速排序
+    public void quickSort(int[] nums,int l,int r){
+        if (l>=r){
+            return;
+        }
+        int pivotIndex = partition(nums,l,r);
+        quickSort(nums,l,pivotIndex-1);
+        quickSort(nums,pivotIndex+1,r);
+    }
+
+    //分区函数
+    public int partition(int[] nums,int l, int r){
+        int randomIndex=random.nextInt(r-l+1)+l;
+        swap(nums,l,randomIndex);
+        int pivot=nums[l];
+        int j=l+1;
+        for (int i=j;i<=r;i++){
+            if (nums[i]<=pivot){
+                swap(nums,i,j);
+                j++;
+            }
+        }
+        swap(nums,l,j-1);
+        return j-1;
+    }
+
+    //交换元素
+    public void swap (int[] nums, int i, int j){
+        int tmp=nums[i];
+        nums[i]=nums[j];
+        nums[j]=tmp;
+    }
+}
+```
+
+### Quick Sort w/ Two pointers
+Java
+```java
+class Solution {
+    //新建随机类
+    Random random= new Random();
+
+    public int[] sortArray(int[] nums) {
+        quickSort(nums,0,nums.length-1);
+        return nums;
+    }
+
+    //随机快速排序函数：
+    public void quickSort(int[] nums,int l,int r){
+        if (l>=r){
+            return;
+        }
+        int pivotIndex = partition(nums,l,r);
+        quickSort(nums,l,pivotIndex-1);
+        quickSort(nums,pivotIndex+1,r);
+    }
+
+    //分区函数
+    public int partition(int[] nums,int l, int r){
+        int randomIndex=random.nextInt(r-l+1)+l;
+        swap(nums,l,randomIndex);
+        int pivot=nums[l];
+        int le=l+1;
+        int ge=r;
+        while(true){
+            while(le<=ge&&nums[le]<pivot){
+                le++;
+            }
+            while(le<=ge&&nums[ge]>pivot){
+                ge--;
+            }
+            if (le>=ge){
+                break;
+            }
+            swap(nums,le,ge);
+            le++;
+            ge--;
+        }
+        swap(nums,l,ge);
+        return ge;
+    }
+
+    //交换元素函数
+    public void swap (int[] nums, int i, int j){
+        int tmp=nums[i];
+        nums[i]=nums[j];
+        nums[j]=tmp;
+    }
+}
+```
